openjdk23/jdk/test/langtools/tools/javac/annotations/neg/OverrideNo.java
/*
 * StarshipOS Copyright (c) 2025. R.A. James
 */

package overrideNo;

abstract class A {
}

class B extends A {
    @Override void f() {}
}
